--- a/index.html
+++ b/index.html
@@ -12,6 +12,44 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <section class="container">
+    <div class="marca">
+      <img src="./img/taskfy.svg" alt="Logo da marca taskFy">
+    </div>
+    <h2>Suas tarefas</h2>
+    <div class="nova-tarefa">
+      <input type="text" name="add-tarefa" id="add-tarefa" placeholder="Adicionar nova tarefa">
+      <button class="btn">Adicionar</button>
+    </div>
+    <ul>
+      <li class="tarefa-item">
+        <div>
+          <input type="checkbox" name="tarefa" id="tarefa">
+          <label for="tarefa">Ir na lotérica</label>
+        </div>
+        <div class="lixeira">
+          <img src="./img/lixeira-icon.svg" alt="">
+        </div>
+      </li>
+      <li class="tarefa-item">
+        <div>
+          <input type="checkbox" name="tarefa" id="tarefa">
+          <label for="tarefa">Ir na padaria comprar pão carioquinha</label>
+        </div>
+        <div class="lixeira">
+          <img src="./img/lixeira-icon.svg" alt="">
+        </div>
+      </li>
+      <li class="tarefa-item">
+        <div>
+          <input type="checkbox" name="tarefa" id="tarefa">
+          <label for="tarefa">Ir na lotérica pagar a conta de luz da tataratataravó</label>
+        </div>
+        <div class="lixeira">
+          <img src="./img/lixeira-icon.svg" alt="">
+        </div>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
