Implementa funcionalidade de adicionar tarefa

--- a/index.html
+++ b/index.html
@@ -18,23 +18,19 @@
     <div class="marca">
       <img src="./img/taskfy.svg" alt="Logo da marca taskFy">
     </div>
+
     <h1>Suas tarefas</h1>
+
     <div class="nova-tarefa">
       <input type="text" name="tarefa-input" id="tarefa-input" class="tarefa-input" placeholder="Adicionar nova tarefa">
       <button class="btn">Adicionar</button>
     </div>
+
+    <p class="texto-info">Não há tarefas no momento</p>
+
     <ul class="container-tarefas">
-      <li class="tarefa-item">
-        <div>
-          <input type="checkbox" name="tarefa-checkbox" id="tarefa-checkbox">
-          <label for="tarefa-checbox-1" class="visually-hidden">Concluir tarefa</label>
-          <p class="tarefa-descricao">Ir na lotérica pagar a fatura do cartão de crédito do irmão do neto do afilhado do meu tataratataravô</p>
-        </div>
-        <div class="lixeira">
-          <img src="./img/lixeira-icon.svg" alt="">
-        </div>
-      </li>
     </ul>
   </section>
+  <script src="./js/script.js"></script>
 </body>
 </html>
