Refatora as funcionalidades de adicionar e deletar tarefas

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <h1>Suas tarefas</h1>
 
-    <div class="nova-tarefa">
+    <form class="form-tarefa">
       <input type="text" name="tarefa-input" id="tarefa-input" class="tarefa-input" placeholder="Adicionar nova tarefa">
-      <button class="btn">Adicionar</button>
-    </div>
+      <button type="submit" class="btn">Adicionar</button>
+    </form>
 
     <p class="texto-info">Não há tarefas no momento</p>
 
