Implementa modal para exibir tarefas longas

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <ul class="container-tarefas">
     </ul>
   </section>
+
+  <section class="container-modal">
+    <div class="modal">
+      <p class="descricao-completa"></p>
+      <button class="fechar-modal">Fechar</button>
+    </div>
+  </section>
   <script src="./js/script.js"></script>
 </body>
 </html>
